--- a/SGAE/templates/SGAE/partials/head.html
+++ b/SGAE/templates/SGAE/partials/head.html
@@ -62,27 +62,26 @@
             --font-primary: sans-serif;
             --font-headings: 'Roboto Slab', serif;
 
-            --spacing-gutter-medium: .3rem;
-            --spacing-gutter-large: .4rem;
+            --spacing-gutter-medium: 3rem;
+            --spacing-gutter-large: 4rem;
         }
 
         * {
             padding: 0;
             margin: 0;
-            box-sizing: 0;
+            box-sizing: border-box;
 
         }
 
         html {
-
             font-size: 62.5%;
         }
 
         body {
-
             font-size: 1.6rem;
             font-family: var(--font-primary);
             background: var(--color-gray-1);
+            color: var(--color-dark-text);
         }
 
         h1,
@@ -96,9 +95,9 @@
         }
 
         .container {
-
-            max-width: 114rem;
+            max-width: 144rem;
             margin: 0 auto;
+            padding: var(--spacing-gutter-medium);
         }
 
         .main-header-container {
@@ -112,24 +111,20 @@
             color: var(--color-white);
             text-decoration: none;
             display: flex;
-            flex-flow: nowrap;
+            flex-flow: row nowrap;
             align-items: center;
             justify-content: center;
             width: fit-content;
             margin: 0 auto;
         }
 
-        .main-logo-icon {
-
-            margin-right: .2rem;
-        }
 
         .search-form {
 
-            border: .2rem solid var(--color-primary-dark);
+            border: 0.2rem solid var(--color-primary-dark);
             max-width: 64rem;
             margin: 0 auto;
-            border-radius: .4rem;
+            border-radius: 0.4rem;
             position: relative;
             transition: all 300ms ease-in-out;
         }
@@ -157,15 +152,116 @@
             right: 0;
         }
 
+        .search-button:focus {
+
+            outline: 1px solid var(--color-primary);
+            background: rgba(0, 0, 0, 0.5);
+
+        }
+
         .search-form:focus-within {
 
             border-color: var(--color-primary);
             background: var(--color-white)
         }
 
-        .search-form:focus-within.search-button {
-
+        .search-form:focus-within .search-button {
             color: var(--color-primary);
+        }
+
+        .main-content {
+            padding-top: 0;
+        }
+
+        .main-content-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+            gap: var(--spacing-gutter-large);
+        }
+
+        .sgae {
+
+            background: var(--color-white);
+            box-shadow: -5px, 5px, 10px rgba(0, 0, 0, 0.2);
+            transform: scale(1);
+            transition: all 300ms ease-in-out;
+            border-radius: .8rem;
+            overflow: hidden;
+        }
+
+        .sgae img {
+            max-width: 100%;
+        }
+
+        .sgae-list-item {
+            max-width: 64rem;
+        }
+
+        .sgae-list-item:hover {
+            transform: scale(1.02);
+            box-shadow: 8px, 8px, 20px rgba(0, 0, 0, 25)
+        }
+
+        .sgae-title-container {
+            padding: var(--spacing-gutter-medium);
+            padding-bottom: 2rem;
+        }
+
+        .sgae-content {
+            padding: var(--spacing-gutter-medium);
+            padding-top: 2rem;
+        }
+
+        .sgae-meta-container {
+            display: flex;
+            flex-flow: row wrap;
+            padding: var(--spacing-gutter-medium);
+            background: var(--color-gray-2);
+        }
+
+        .sgae-meta {
+            display: flex;
+            flex-flow: column nowrap;
+            flex-shrink: 1;
+            flex-grow: 1;
+            text-align: center;
+        }
+
+        .sgae-meta-title {
+            font-size: 1.6rem;
+        }
+
+        .sgae-footer a {
+            background: var(--color-primary-dark);
+            display: block;
+            color: var(--color-white);
+            text-decoration: none;
+            text-align: center;
+            padding: 1.5rem var(--spacing-gutter-medium);
+            transition: all 300ms ease-in-out;
+        }
+
+        .sgae-footer a:hover {
+            filter: brightness(2);
+        }
+
+        .main-footer {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: var(--color-primary-dark);
+            color: var(--color-white);
+            padding: var(--spacing-gutter-large);
+        }
+
+        .main-footer a {
+            color: var(--color-white);
+            text-decoration: none;
+            transition: all 300ms ease-in-out;
+        }
+
+        .main-footer a:hover {
+            filter: brightness(.8);
         }
     </style>
 
