--- a/SGAE/templates/SGAE/partials/header.html
+++ b/SGAE/templates/SGAE/partials/header.html
@@ -1,9 +1,8 @@
 <header class="main-header-container">
-
     <div class="main-header container">
         <h1>
             <a class="logo" href="/">
-                <span class="main-logo-text">Sua Autoescola</span>
+                <span class="main-logo-text">SGAE</span>
             </a>
         </h1>
     </div>
